--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/friendica-fill.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FarmWise - Climate-Smart Farming</title>
+    <title>FarmClima - Climate-Smart Farming</title>
   </head>
   <body>
     <div id="root"></div>
